2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Forgot to include SplitOff (i.e., N=[null]).

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fixed regex error in params_matching for SplitOffN.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: %p/src isn't reliable (FetchAltDir and Buildpath
	in fink.conf), so warn if it's used.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Prohibit SourceN:none (Source:none still okay).

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Hacks to keep emacs paren balancing from getting
	confused. Changed regex match m#pattern# to /pattern/ so it
	doesn't look like a comment, and added POD line containing a dummy
	closing ")" where a pattern had $) which looks like a variable.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: improve regex to find SplitOffN fields
	* Validation.pm: For *N* fields, improve checking of N to allow
	any number of digits but no N=1 or leading zeros. Consolidate
	Source* vs. Source*-MD5 correspondence checks (all Validation.pm
	and PkgVersion.pm from or based on Comments in Patches #913842)
	* Services.pm: check for `uname` in /bin if not in /usr/bin
	
2004-03-16  Ben Hines <benh57@users.sourceforge.net>

	* PkgVersion.pm: Add get_filename to get the info file name (used by FinkCommander)

2004-03-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Change from pathsetup.command to pathsetup.sh

2004-03-16  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Command.pm, PkgVersion.pm: New &du_sk replacement for 'du -sk'.
	This changes the meaning of Installed-Size in .deb's from bytes to
	KB, in accordance with Debian policy. Apt and dpkg should now
	understand it correctly.

2004-03-14  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm:  it's now OK to install files directly into
	/sw/share/emacs/site-lisp, so we no longer check for this
