@@ -1,0 +1,9 @@
+2004-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
+	* non_consecutive_source.t: New test for non-consecutive SourceN
+	fields.
+	* non-consecutive-test.info, non-consecutive-test2.info: .info
+	files for test case.
+
+
+
